--- a/.github/workflows/build-listing.yml
+++ b/.github/workflows/build-listing.yml
@@ -1,5 +1,10 @@
 name: Build Repo Listing
 
+env:
+  CurrentPackageName: com.thepartyzonevr.camerasystem
+  listPublishDirectory: Website
+  pathToCi: ci
+
 on: 
   workflow_dispatch:
   push:
